--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="vendor/twbs/bootstrap-icons/font/bootstrap-icons.css">
     <link id="theme-stylesheet" rel="stylesheet" href="{{ theme_base_path }}/{{ theme }}/style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
     <script type="text/javascript" src="assets/helper.js?time={{ file_version }}"></script>
+    <script type="text/javascript" src="assets/userSettings.js?time={{ file_version }}"></script>
 </head>
 <body>
 
