--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -14,93 +14,91 @@
 </nav>
 
 {% if (perm_edit == "all" or (perm_edit == "own" or perm_edit == "own_as_client") and user_is_zone_owner == "1") and domain_type != "SLAVE" and iface_edit_add_record_top %}
-<h5 class="mb-3">{% trans %}Add new record{% endtrans %}</h5>
-
-<form class="needs-validation" method="post" action="index.php?page=add_record&id={{ zone_id }}" novalidate>
-    <input type="hidden" name="_token" value="{{ csrf_token }}">
-    <input type="hidden" name="domain" value="{{ zone_id }}">
-    <table class="table table-striped table-hover table-sm">
-        <tr>
-            {% if iface_edit_show_id %}
-            <th>&nbsp;</th>
-            {% endif %}
-            <th>{% trans %}Name{% endtrans %}</th>
-            <th>{% trans %}Type{% endtrans %}</th>
-            <th>{% trans %}Content{% endtrans %}</th>
-            <th>{% trans %}Priority{% endtrans %}</th>
-            <th>{% trans %}TTL{% endtrans %}</th>
-            {% if iface_record_comments %}
-                <th>{% trans %}Comment{% endtrans %}</th>
-            {% endif %}
-            <th class="text-center">
-                {% if not is_reverse_zone and iface_add_reverse_record %}
-                    {% trans %}Add PTR{% endtrans %}
-                {% endif %}
-                {% if is_reverse_zone and iface_add_domain_record %}
-                    {% trans %}Add A/AAAA{% endtrans %}
-                {% endif %}
-            </th>
-            <th></th>
-        </tr>
-        <tr>
-            {% if iface_edit_show_id %}
-            <td>&nbsp;</td>
-            {% endif %}
-            <td class="col-sm-2">
-                <input class="form-control form-control-sm" type="text" name="name" value="">
-            </td>
-            <td class="col-sm-1">
-                <select id="recordTypeSelectTop" class="form-select form-select-sm" name="type" onchange="updateContentInput('recordTypeSelectTop', 'contentInputContainerTop', 'recordContentTop')">
-                    {% set rev = false %}
-                    {% for record_type in record_types %}
-                    {% set add = "" %}
-                    {% if is_reverse_zone and record_type == "PTR" %}
-                    {% set add = "SELECTED" %}
+<div class="card shadow-sm mb-4">
+    <div class="card-header py-3">
+        <strong><i class="bi bi-plus-circle me-2"></i>{% trans %}Add new record{% endtrans %}</strong>
+    </div>
+    <div class="card-body">
+        <form class="needs-validation" method="post" action="index.php?page=add_record&id={{ zone_id }}" novalidate>
+            <input type="hidden" name="_token" value="{{ csrf_token }}">
+            <input type="hidden" name="domain" value="{{ zone_id }}">
+            <table class="table table-striped table-hover table-sm">
+                <tr>
+                    <th>{% trans %}Name{% endtrans %}</th>
+                    <th>{% trans %}Type{% endtrans %}</th>
+                    <th>{% trans %}Content{% endtrans %}</th>
+                    <th>{% trans %}Priority{% endtrans %}</th>
+                    <th>{% trans %}TTL{% endtrans %}</th>
+                    {% if iface_record_comments %}
+                        <th>{% trans %}Comment{% endtrans %}</th>
                     {% endif %}
+                    <th class="text-center">
+                        {% if not is_reverse_zone and iface_add_reverse_record %}
+                            {% trans %}Add PTR{% endtrans %}
+                        {% endif %}
+                        {% if is_reverse_zone and iface_add_domain_record %}
+                            {% trans %}Add A/AAAA{% endtrans %}
+                        {% endif %}
+                    </th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td class="col-sm-2">
+                        <input class="form-control form-control-sm" type="text" name="name" value="">
+                    </td>
+                    <td class="col-sm-1">
+                        <select id="recordTypeSelectTop" class="form-select form-select-sm" name="type" onchange="updateContentInput('recordTypeSelectTop', 'contentInputContainerTop', 'recordContentTop')">
+                            {% set rev = false %}
+                            {% for record_type in record_types %}
+                            {% set add = "" %}
+                            {% if is_reverse_zone and record_type == "PTR" %}
+                            {% set add = "SELECTED" %}
+                            {% endif %}
 
-                    {% if iface_add_reverse_record and record_type == "A" %}
-                    {% set add = "SELECTED" %}
-                    {% set rev = true %}
+                            {% if iface_add_reverse_record and record_type == "A" %}
+                            {% set add = "SELECTED" %}
+                            {% set rev = true %}
+                            {% endif %}
+                            <option {{ add }} value="{{ record_type }}">{{ record_type }}</option>
+                            {% endfor %}
+                        </select>
+                    </td>
+                    <td>
+                        <div id="contentInputContainerTop">
+                            <input id="recordContentTop" class="form-control form-control-sm" type="text" name="content" value="" required>
+                        </div>
+                        <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
+                    </td>
+                    <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="prio" value="0"
+                                                min="0" max="65535" pattern="[0-9]*"></td>
+                    <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="ttl"
+                                                min="0" max="2147483647" pattern="[0-9]*" value="{{ dns_ttl }}" required>
+                        <div class="invalid-feedback">{% trans %}Provide TTL{% endtrans %}</div>
+                    </td>
+                    {% if iface_record_comments %}
+                    <td><input class="form-control form-control-sm" type="text" name="comment" value=""></td>
                     {% endif %}
-                    <option {{ add }} value="{{ record_type }}">{{ record_type }}</option>
-                    {% endfor %}
-                </select>
-            </td>
-            <td>
-                <div id="contentInputContainerTop">
-                    <input id="recordContentTop" class="form-control form-control-sm" type="text" name="content" value="" required>
-                </div>
-                <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
-            </td>
-            <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="prio" value="0"
-                                        min="0" max="65535" pattern="[0-9]*"></td>
-            <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="ttl"
-                                        min="0" max="2147483647" pattern="[0-9]*" value="{{ dns_ttl }}" required>
-                <div class="invalid-feedback">{% trans %}Provide TTL{% endtrans %}</div>
-            </td>
-            {% if iface_record_comments %}
-            <td><input class="form-control form-control-sm" type="text" name="comment" value=""></td>
-            {% endif %}
-            <td class="col-sm-1 text-center">
-                {% if not is_reverse_zone and iface_add_reverse_record %}
-                <span class="align-middle">
-                    <input class="form-check-input" type="checkbox" name="reverse">
-                </span>
-                {% endif %}
-                {% if is_reverse_zone and iface_add_domain_record %}
-                <span class="align-middle">
-                    <input class="form-check-input" type="checkbox" name="create_domain_record">
-                </span>
-                {% endif %}
-            </td>
-            <td class="col-sm-1">
-                <input class="btn btn-primary btn-sm" type="submit" name="commit"
-                       value="{% trans %}Add record{% endtrans %}">
-            </td>
-        </tr>
-    </table>
-</form>
-<hr>
+                    <td class="col-sm-1 text-center">
+                        {% if not is_reverse_zone and iface_add_reverse_record %}
+                        <span class="align-middle">
+                            <input class="form-check-input" type="checkbox" name="reverse">
+                        </span>
+                        {% endif %}
+                        {% if is_reverse_zone and iface_add_domain_record %}
+                        <span class="align-middle">
+                            <input class="form-check-input" type="checkbox" name="create_domain_record">
+                        </span>
+                        {% endif %}
+                    </td>
+                    <td class="col-sm-1">
+                        <input class="btn btn-primary btn-sm" type="submit" name="commit"
+                            value="{% trans %}Add record{% endtrans %}">
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </div>
+</div>
 {% endif %}
 
 <div class="card shadow-sm mb-4">
@@ -406,88 +404,81 @@
             <input type="hidden" name="_token" value="{{ csrf_token }}">
             <input type="hidden" name="domain" value="{{ zone_id }}">
             
-            <div class="table-responsive">
-                <table class="table table-striped table-hover table-sm">
-                    <thead class="table-light">
-                    <tr>
-                        <th>{% trans %}Name{% endtrans %}</th>
-                        <th>&nbsp;</th>
-                        <th>{% trans %}Type{% endtrans %}</th>
-                        <th>{% trans %}Content{% endtrans %}</th>
-                        <th>{% trans %}Priority{% endtrans %}</th>
-                        <th>{% trans %}TTL{% endtrans %}</th>
-                        {% if iface_record_comments %}
-                            <th>{% trans %}Comment{% endtrans %}</th>
+            <table class="table table-striped table-hover table-sm">
+                <tr>
+                    <th>{% trans %}Name{% endtrans %}</th>
+                    <th>{% trans %}Type{% endtrans %}</th>
+                    <th>{% trans %}Content{% endtrans %}</th>
+                    <th>{% trans %}Priority{% endtrans %}</th>
+                    <th>{% trans %}TTL{% endtrans %}</th>
+                    {% if iface_record_comments %}
+                        <th>{% trans %}Comment{% endtrans %}</th>
+                    {% endif %}
+                    <th class="text-center">
+                        {% if not is_reverse_zone and iface_add_reverse_record %}
+                            {% trans %}Add PTR{% endtrans %}
                         {% endif %}
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td class="col-sm-2">
-                            <input class="form-control form-control-sm" type="text" name="name" value="" data-testid="record-name-input">.{{ idn_zone_name ?: zone_name }}
-                        </td>
-                        <td>IN</td>
-                        <td class="col-sm-1">
-                            <select id="recordTypeSelectBottom" class="form-select form-select-sm" name="type" onchange="updateContentInput('recordTypeSelectBottom', 'contentInputContainerBottom', 'recordContentBottom')">
-                                {% set rev = false %}
-                                {% for record_type in record_types %}
-                                {% set add = "" %}
-                                {% if is_reverse_zone and record_type == "PTR" %}
-                                {% set add = "SELECTED" %}
-                                {% endif %}
-
-                                {% if iface_add_reverse_record and record_type == "A" %}
-                                {% set add = "SELECTED" %}
-                                {% set rev = true %}
-                                {% endif %}
-                                <option {{ add }} value="{{ record_type }}">{{ record_type }}</option>
-                                {% endfor %}
-                            </select>
-                        </td>
-                        <td>
-                            <div id="contentInputContainerBottom">
-                                <input id="recordContentBottom" class="form-control form-control-sm" type="text" name="content" value="" data-testid="record-content-input" required>
-                            </div>
-                            <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
-                        </td>
-                        <td class="col-sm-1">
-                            <input class="form-control form-control-sm" type="number" name="prio" value="0" min="0" max="65535" pattern="[0-9]*">
-                        </td>
-                        <td class="col-sm-1">
-                            <input class="form-control form-control-sm" type="number" name="ttl" min="0" max="2147483647" pattern="[0-9]*" value="{{ dns_ttl }}" required>
-                            <div class="invalid-feedback">{% trans %}Provide TTL{% endtrans %}</div>
-                        </td>
-                        {% if iface_record_comments %}
-                            <td><input class="form-control form-control-sm" type="text" name="comment" value=""></td>
+                        {% if is_reverse_zone and iface_add_domain_record %}
+                            {% trans %}Add A/AAAA{% endtrans %}
                         {% endif %}
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            
-            <div class="mt-3">
-                {% if not is_reverse_zone and iface_add_reverse_record %}
-                <div class="form-check mb-2">
-                    <input class="form-check-input" type="checkbox" id="reverse" name="reverse" data-testid="add-reverse-record-checkbox">
-                    <label class="form-check-label text-secondary" for="reverse">
-                        {% trans %}Also add a PTR record in the matching zone{% endtrans %}
-                    </label>
-                </div>
-                {% endif %}
+                    </th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td class="col-sm-2">
+                        <input class="form-control form-control-sm" type="text" name="name" value="" data-testid="record-name-input">
+                    </td>
+                    <td class="col-sm-1">
+                        <select id="recordTypeSelectBottom" class="form-select form-select-sm" name="type" onchange="updateContentInput('recordTypeSelectBottom', 'contentInputContainerBottom', 'recordContentBottom')">
+                            {% set rev = false %}
+                            {% for record_type in record_types %}
+                            {% set add = "" %}
+                            {% if is_reverse_zone and record_type == "PTR" %}
+                            {% set add = "SELECTED" %}
+                            {% endif %}
 
-                {% if is_reverse_zone and iface_add_domain_record %}
-                <div class="form-check mb-2">
-                    <input class="form-check-input" type="checkbox" id="create_domain_record" name="create_domain_record" data-testid="add-domain-record-checkbox">
-                    <label class="form-check-label text-secondary" for="create_domain_record">
-                        {% trans %}Also add an A/AAAA record in the matching zone{% endtrans %}
-                    </label>
-                </div>
-                {% endif %}
-                
-                <button class="btn btn-primary btn-sm" type="submit" name="commit" data-testid="add-record-button">
-                    <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add record{% endtrans %}
-                </button>
-            </div>
+                            {% if iface_add_reverse_record and record_type == "A" %}
+                            {% set add = "SELECTED" %}
+                            {% set rev = true %}
+                            {% endif %}
+                            <option {{ add }} value="{{ record_type }}">{{ record_type }}</option>
+                            {% endfor %}
+                        </select>
+                    </td>
+                    <td>
+                        <div id="contentInputContainerBottom">
+                            <input id="recordContentBottom" class="form-control form-control-sm" type="text" name="content" value="" data-testid="record-content-input" required>
+                        </div>
+                        <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
+                    </td>
+                    <td class="col-sm-1">
+                        <input class="form-control form-control-sm" type="number" name="prio" value="0" min="0" max="65535" pattern="[0-9]*">
+                    </td>
+                    <td class="col-sm-1">
+                        <input class="form-control form-control-sm" type="number" name="ttl" min="0" max="2147483647" pattern="[0-9]*" value="{{ dns_ttl }}" required>
+                        <div class="invalid-feedback">{% trans %}Provide TTL{% endtrans %}</div>
+                    </td>
+                    {% if iface_record_comments %}
+                        <td><input class="form-control form-control-sm" type="text" name="comment" value=""></td>
+                    {% endif %}
+                    <td class="col-sm-1 text-center">
+                        {% if not is_reverse_zone and iface_add_reverse_record %}
+                        <span class="align-middle">
+                            <input class="form-check-input" type="checkbox" name="reverse" data-testid="add-reverse-record-checkbox">
+                        </span>
+                        {% endif %}
+                        {% if is_reverse_zone and iface_add_domain_record %}
+                        <span class="align-middle">
+                            <input class="form-check-input" type="checkbox" name="create_domain_record" data-testid="add-domain-record-checkbox">
+                        </span>
+                        {% endif %}
+                    </td>
+                    <td class="col-sm-1">
+                        <input class="btn btn-primary btn-sm" type="submit" name="commit" data-testid="add-record-button"
+                            value="{% trans %}Add record{% endtrans %}">
+                    </td>
+                </tr>
+            </table>
         </form>
     </div>
 </div>
