--- a/templates/default/delete_records.html
+++ b/templates/default/delete_records.html
@@ -1,7 +1,12 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
+        {% if zone_id %}
+        <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
+        <li class="breadcrumb-item"><a href="index.php?page=edit&id={{ zone_id }}">{% trans %}Edit zone{% endtrans %}</a></li>
+        {% else %}
         <li class="breadcrumb-item"><a href="index.php?page=search">{% trans %}Search{% endtrans %}</a></li>
+        {% endif %}
         <li class="breadcrumb-item active" aria-current="page">{% trans %}Delete records{% endtrans %}</li>
     </ol>
 </nav>
@@ -45,13 +50,20 @@
 
         <form method="post" action="index.php?page=delete_records">
             <input type="hidden" name="_token" value="{{ csrf_token }}">
+            {% if zone_id %}
+            <input type="hidden" name="zone_id" value="{{ zone_id }}">
+            {% endif %}
             {% for record in records %}
             <input type="hidden" name="record_id[]" value="{{ record['id'] }}">
             {% endfor %}
             <button type="submit" name="confirm" value="1" class="btn btn-danger btn-sm">
                 <i class="bi bi-trash-fill me-1 text-white"></i>{% trans %}Yes, delete these records{% endtrans %}
             </button>
+            {% if zone_id %}
+            <a href="index.php?page=edit&id={{ zone_id }}" class="btn btn-secondary btn-sm ms-2">
+            {% else %}
             <a href="index.php?page=search" class="btn btn-secondary btn-sm ms-2">
+            {% endif %}
                 <i class="bi bi-x-circle me-1 text-white"></i>{% trans %}Cancel{% endtrans %}
             </a>
         </form>
