style(ui): change export CSV button color to secondary

--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -128,7 +128,7 @@
                 <i class="bi bi-arrow-counterclockwise me-1 text-white"></i>{% trans %}Reset{% endtrans %}
             </button>
             {% endif %}
-            <a href="index.php?page=edit&id={{ zone_id }}&export_csv=1" class="btn btn-success btn-sm">
+            <a href="index.php?page=edit&id={{ zone_id }}&export_csv=1" class="btn btn-secondary btn-sm">
                 <i class="bi bi-file-earmark-spreadsheet me-1 text-white"></i>{% trans %}Export CSV{% endtrans %}
             </a>
             {% if pdnssec_use %}
