--- a/templates/default/list_zones.html
+++ b/templates/default/list_zones.html
@@ -155,6 +155,15 @@
                         {% endif %}
                         <td class="text-end">
                             <div class="gap-2">
+                                {% if perm_zone_master_add %}
+                                {% set zoneName = zone['name'] %}
+                                {% if not (zoneName ends with 'in-addr.arpa' or zoneName ends with 'ip6.arpa') %}
+                                <a class="btn btn-outline-secondary btn-sm" href="index.php?page=batch_ptr_record&id={{ zone['id'] }}">
+                                    <i class="bi bi-arrow-repeat text-secondary"></i>
+                                    <span class="d-none d-md-inline">{% trans %}PTR{% endtrans %}</span>
+                                </a>
+                                {% endif %}
+                                {% endif %}
                                 <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit&id={{ zone['id'] }}" data-testid="edit-zone-{{ zone['id'] }}">
                                     <i class="bi bi-pencil-square text-primary"></i>
                                     <span class="d-none d-md-inline">{% trans %}Edit{% endtrans %}</span>
@@ -180,13 +189,11 @@
             {% endif %}
 
             {% if perm_edit == "all" or perm_edit == "own" %}
-            {% if count_zones_view != 0 %}
             <div class="card-footer py-3 mt-3">
                 <button type="submit" name="commit" class="btn btn-danger btn-sm">
                     <i class="bi bi-trash me-1 text-white"></i>{% trans %}Delete zone(s){% endtrans %}
                 </button>
             </div>
-            {% endif %}
             {% endif %}
         </form>
     </div>
