--- a/templates/default/list_zone_templ.html
+++ b/templates/default/list_zone_templ.html
@@ -62,6 +62,12 @@
                     {% if (perm_zone_master_add and template['username']) or perm_is_godlike %}
                     <td class="text-end">
                         <div class="gap-2">
+                            {% if template['zones_linked'] != '0' %}
+                            <a class="btn btn-sm btn-outline-secondary"
+                               href="index.php?page=list_template_zones&id={{ template['id'] }}">
+                                <i class="bi bi-list text-secondary"></i> <span class="d-none d-md-inline text-secondary">{% trans %}View Zones{% endtrans %}</span>
+                            </a>
+                            {% endif %}
                             <a class="btn btn-sm btn-outline-primary"
                                href="index.php?page=edit_zone_templ&id={{ template['id'] }}">
                                 <i class="bi bi-pencil-square text-primary"></i> <span class="d-none d-md-inline text-primary">{% trans %}Edit{% endtrans %}</span>
